# agent-trading

./: .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  README.md  blog.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
docs/: data.json  index.html
plans/: overhaul.md  phase-2-mcp-servers.md  phase-3-llm-agents.md  phase-4-orchestration.md  phase-5-reporting.md  phase-6-polish-optional.md  phase-7-multi-source-signals.md  phase-8-agentic-tool-calling.md  reddit-rss-migration.md
project-information/: blog-outline.md  deployement.md  memory.md  pipeline.md  specs.md  test.md  things-to-do.md
reports/: 2026-02-16.md  2026-02-17.md  2026-02-18.md
scripts/: backtest.py  check_schedule.py  dry_run.py  report.py  run_daily.py  run_scheduler.py  run_sell_checks.py  setup_db.py
src/: config.py  models.py
src/agents/: base_agent.py  market_agent.py  pipeline.py  research_agent.py  risk_agent.py  sentiment_agent.py  tool_executor.py  tools.py  trader_agent.py
src/agents/prompts/: trader.md  (+6 more)
src/backtesting/: data_source.py  engine.py
src/db/: connection.py  models.py
src/notifications/: telegram.py
src/orchestrator/: __init__.py  approval.py  mcp_client.py  rotation.py  scheduler.py  sell_strategy.py  supervisor.py  trade_executor.py
src/reporting/: __init__.py  daily_report.py  dashboard.py  formatter.py  leaderboard.py  pnl.py
src/utils/: recently_traded.py
tests/: test_config.py  test_models.py
tests/test_agents/: test_agents.py  test_pipeline.py  test_providers.py  test_research_agent.py  test_risk_agent.py
tests/test_backtesting/: test_engine.py
(+40 files in other folders)
