[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "trading-bot"
version = "0.1.0"
description = "Multi-LLM agentic trading system for European stocks"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "mcp>=1.0",
    "feedparser>=6.0",
    "yfinance>=0.2",
    "httpx>=0.27",
    "anthropic>=0.52",
    "openai>=1.60",
    "apscheduler>=3.10",
    "rich>=14.3.2",
    "tenacity>=9.1.4",
    "beautifulsoup4>=4.14.3",
    "lxml>=6.0.2",
]

[dependency-groups]
dev = [
    "ruff>=0.9",
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
